--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/font": "^7.4.47",
+    "@mdi/js": "^7.4.47",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "underscore": "^1.13.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuetify": "^3.7.4"
